# zap

./: .gitignore  CMakeLists.txt  Dockerfile  auth.json  bb.cpp  conanfile.py  conanfile.txt  disco.json  handle_ip.json
cmake/: FindFlatBuffers.cmake
functions/auth/: CMakeLists.txt  authd.cpp
functions/auth/cpp-jwt/include/jwt/: jwt.hpp
functions/discovery/: CMakeLists.txt  disc.cpp
functions/ip_handler/: CMakeLists.txt  ip_addr_generated.h  ip_handler.cpp
include/bb/: auth.hpp  cloud.hpp  dynamic.hpp  flatbuf.hpp  function_traits.hpp  handler.hpp  json.hpp  json_auth.hpp  registry.hpp  span.hpp  static.hpp  zap.hpp
schemas/: ip_addr.fbs  req.fbs
src/: bb_auth.cpp  handler.cpp  ip_handler.cpp  json-to-client.cpp  jwt-auth.cpp  registry.cpp  zap-rt.cpp  zap.cpp
ts/: index.ts  ip_addr_generated.ts  package-lock.json  package.json  req_generated.ts  tsconfig.json  zap.ts
zaprt/: CMakeLists.txt
zaprt/include/zap/: json_auth.hpp
zaprt/src/: iauth.cpp  iauth.hpp  json-to-client.cpp  module_info.hpp  rem_auth.cpp  rem_auth.hpp  udp_server.cpp  udp_server.hpp  zap-rt.cpp
